--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,23 @@
     <script src="./bundle.js" defer></script>
   </head>
   <body>
+    
+    <header>
+      <div class=“logo”>
+        <img alt=“logo” src=“images/logo.png” />
+      </div>
+      <nav>
+        <div class=“nav-item”>
+          <a href=“#”>Home</a>
+        </div>
+        <div class=“nav-item”>
+          <a href=“#”>About</a>
+        </div>
+        <div class=“nav-item”>
+          <a href=“#”>Contact Us</a>
+        </div>
+      </nav>
+    </header>
     <div id="map"></div>
   </body>
 </html>
